Fixes overflow

--- a/ckanext/ontario_theme/fanstatic/common.css
+++ b/ckanext/ontario_theme/fanstatic/common.css
@@ -392,9 +392,9 @@ input[type="reset"].ontario-search-reset:focus {
 
   margin-bottom: 0;
   background-color: #fff;
-  padding-right: 15px;
+  padding-right: 1rem;
   margin-left: -20px;
-  margin-right: -15px;
+  margin-right: -1rem;
 }
 
 #group-datasets-search-form,
